--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </tr>
                 <tr>
                     <td><a href="#Ф">Ф ф</a></td>
-                    <td>ФЕрт</td>
+                    <td>Ферт</td>
                     <td>[у]</td>
                 </tr>
                 <tr>
