--- a/index.html
+++ b/index.html
@@ -387,9 +387,7 @@
         <h1><a id="цифровые_значения_букв" href="#цифровые_значения_букв"># Цифровые значения букв</a></h1>
         <hr>
         <p>
-            В церковнославянских текстах не употребляются арабские и латинские цифры. Для записи чисел
-используются буквы церковнославянского алфавита, которые имеют числовые значения. В этом случае
-над буквой ставится знак титла.<br>
+            В церковнославянских текстах не употребляются арабские и латинские цифры. Вместо них используется цифирь — система записи чисел с помощью букв церковнославянского алфавита, имеющих числовые значения. В этом случае над буквой ставится знак титла.<br>
 <table>
     <tr>
         <td>а҃ — 1</td>
