--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
             padding: 2em;
         }
 
+        @media screen and (max-width: 768px) {
+            .main-container {
+                padding: 0;
+            }
+        }
+
         .ui.table td {
             font-family: 'PonomarUnicode';
         }
