--- a/index.html
+++ b/index.html
@@ -98,67 +98,67 @@
                     </tr>
                     <tr>
                         <td><a href="#Б">Б б</a></td>
-                        <td class="tf">Буки</td>
+                        <td class="tf">Бу́ки</td>
                         <td>[б]</td>
                     </tr>
                     <tr>
                         <td><a href="#В">В в</a></td>
-                        <td class="tf">Веди</td>
+                        <td class="tf">Ве́ди</td>
                         <td>[в]</td>
                     </tr>
                     <tr>
                         <td><a href="#Г">Г г</a></td>
-                        <td class="tf">Глаголь</td>
+                        <td class="tf">Глаго́ль</td>
                         <td>[г]</td>
                     </tr>
                     <tr>
                         <td><a href="#Д">Д д</a></td>
-                        <td class="tf">Добро</td>
+                        <td class="tf">Добро́</td>
                         <td>[д]</td>
                     </tr>
                     <tr>
                         <td><a href="#Е">Е е є</a></td>
-                        <td class="tf">Ести</td>
+                        <td class="tf">Есть</td>
                         <td>[е]</td>
                     </tr>
                     <tr>
                         <td><a href="#Ж">Ж ж</a></td>
-                        <td class="tf">Живете</td>
+                        <td class="tf">Живе́те</td>
                         <td>[ж]</td>
                     </tr>
                     <tr>
                         <td><a href="#Ѕ">Ѕ ѕ</a></td>
-                        <td class="tf">Зело</td>
+                        <td class="tf">Зело́</td>
                         <td>[з]</td>
                     </tr>
                     <tr>
                         <td><a href="#З">З з</a></td>
-                        <td class="tf">Земля</td>
+                        <td class="tf">Земля́</td>
                         <td>[з]</td>
                     </tr>
                     <tr>
                         <td><a href="#И">И и</a></td>
-                        <td class="tf">Иже</td>
+                        <td class="tf">И́же</td>
                         <td>[и]</td>
                     </tr>
                     <tr>
                         <td><a href="#І">І ї</a></td>
-                        <td class="tf">І</td>
+                        <td class="tf">И</td>
                         <td>[и]</td>
                     </tr>
                     <tr>
                         <td><a href="#К">К к</a></td>
-                        <td class="tf">Како</td>
+                        <td class="tf">Ка́ко</td>
                         <td>[к]</td>
                     </tr>
                     <tr>
                         <td><a href="#Л">Л л</a></td>
-                        <td class="tf">Люди</td>
+                        <td class="tf">Лю́ди</td>
                         <td>[л]</td>
                     </tr>
                     <tr>
                         <td><a href="#М">М м</a></td>
-                        <td class="tf">Мыслете</td>
+                        <td class="tf">Мысле́те</td>
                         <td>[м]</td>
                     </tr>
                     <tr>
@@ -173,12 +173,12 @@
                     </tr>
                     <tr>
                         <td><a href="#Ѡ">Ѡ ѡ Ѽ ѽ</a></td>
-                        <td class="tf">О (омега)</td>
+                        <td class="tf">Оме́га (он вели́кий)</td>
                         <td>[о]</td>
                     </tr>
                     <tr>
                         <td><a href="#П">П п</a></td>
-                        <td class="tf">Покой</td>
+                        <td class="tf">Поко́й</td>
                         <td>[п]</td>
                     </tr>
                     <tr>
@@ -188,12 +188,12 @@
                     </tr>
                     <tr>
                         <td><a href="#С">С с</a></td>
-                        <td class="tf">Слово</td>
+                        <td class="tf">Сло́во</td>
                         <td>[с]</td>
                     </tr>
                     <tr>
                         <td><a href="#Т">Т т</a></td>
-                        <td class="tf">Твердо</td>
+                        <td class="tf">Тве́рдо</td>
                         <td>[т]</td>
                     </tr>
                     <tr>
@@ -243,7 +243,7 @@
                     </tr>
                     <tr>
                         <td><a href="#Ы">Ы ы</a></td>
-                        <td class="tf">Еры</td>
+                        <td class="tf">Еры́</td>
                         <td>[ы]</td>
                     </tr>
                     <tr>
@@ -268,7 +268,7 @@
                     </tr>
                     <tr>
                         <td><a href="#Ѧ">Ѧ ѧ</a></td>
-                        <td class="tf">Малый юс</td>
+                        <td class="tf">Ма́лый юс</td>
                         <td>[я]</td>
                     </tr>
                     <tr>
@@ -283,12 +283,12 @@
                     </tr>
                     <tr>
                         <td><a href="#Ѳ">Ѳ ѳ</a></td>
-                        <td class="tf">Фита</td>
+                        <td class="tf">Фита́</td>
                         <td>[ф]</td>
                     </tr>
                     <tr>
                         <td><a href="#Ѵ">Ѵ ѵ</a></td>
-                        <td class="tf">Ижица</td>
+                        <td class="tf">И́жица</td>
                         <td class="tf" style="font-size: 16px;">Формально выбор правильного чтения ижицы определяют надстрочные знаки: если над ижицей стоит придыхание и (или) ударение, то это гласный [и], а если ничего не стоит — то согласный [в]. Для обозначения ижиц, которые надо читать как [и], но которые стоят не в начале слова и не под ударением, используется специальный надстрочный знак — кендема (<span class="csf">ѷ</span>), сегодня иногда ошибочно называемый «двойным грависом». Ижица с кендемой отдельной буквой азбуки не является.</td>
                     </tr>
                 </tbody>
