--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Церковнославянский язык</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+    <link rel="stylesheet" href="semantic.min.css">
     <style>
         @font-face {
             font-family: 'PonomarUnicode';
@@ -92,204 +92,204 @@
                 </thead>
                 <tbody class="csf">
                     <tr>
-                        <td><a href="#А">А а</a></td>
+                        <td><a href="буквы/А.html">А а</a></td>
                         <td class="tf">Аз</td>
                         <td>[а]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Б">Б б</a></td>
+                        <td><a href="буквы/Б.html">Б б</a></td>
                         <td class="tf">Бу́ки</td>
                         <td>[б]</td>
                     </tr>
                     <tr>
-                        <td><a href="#В">В в</a></td>
+                        <td><a href="буквы/В.html">В в</a></td>
                         <td class="tf">Ве́ди</td>
                         <td>[в]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Г">Г г</a></td>
+                        <td><a href="буквы/Г.html">Г г</a></td>
                         <td class="tf">Глаго́ль</td>
                         <td>[г]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Д">Д д</a></td>
+                        <td><a href="буквы/Д.html">Д д</a></td>
                         <td class="tf">Добро́</td>
                         <td>[д]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Е">Е е є</a></td>
+                        <td><a href="буквы/Е.html">Е е є</a></td>
                         <td class="tf">Есть</td>
                         <td>[е]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ж">Ж ж</a></td>
+                        <td><a href="буквы/Ж.html">Ж ж</a></td>
                         <td class="tf">Живе́те</td>
                         <td>[ж]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ѕ">Ѕ ѕ</a></td>
+                        <td><a href="буквы/Ѕ.html">Ѕ ѕ</a></td>
                         <td class="tf">Зело́</td>
                         <td>[з]</td>
                     </tr>
                     <tr>
-                        <td><a href="#З">З з</a></td>
+                        <td><a href="буквы/З.html">З з</a></td>
                         <td class="tf">Земля́</td>
                         <td>[з]</td>
                     </tr>
                     <tr>
-                        <td><a href="#И">И и</a></td>
+                        <td><a href="буквы/И.html">И и</a></td>
                         <td class="tf">И́же</td>
                         <td>[и]</td>
                     </tr>
                     <tr>
-                        <td><a href="#І">І ї</a></td>
+                        <td><a href="буквы/І.html">І ї</a></td>
                         <td class="tf">И</td>
                         <td>[и]</td>
                     </tr>
                     <tr>
-                        <td><a href="#К">К к</a></td>
+                        <td><a href="буквы/К.html">К к</a></td>
                         <td class="tf">Ка́ко</td>
                         <td>[к]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Л">Л л</a></td>
+                        <td><a href="буквы/Л.html">Л л</a></td>
                         <td class="tf">Лю́ди</td>
                         <td>[л]</td>
                     </tr>
                     <tr>
-                        <td><a href="#М">М м</a></td>
+                        <td><a href="буквы/М.html">М м</a></td>
                         <td class="tf">Мысле́те</td>
                         <td>[м]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Н">Н н</a></td>
+                        <td><a href="буквы/Н.html">Н н</a></td>
                         <td class="tf">Наш</td>
                         <td>[н]</td>
                     </tr>
                     <tr>
-                        <td><a href="#О">О Ѻ ѻ о</a></td>
+                        <td><a href="буквы/О.html">О Ѻ ѻ о</a></td>
                         <td class="tf">Он</td>
                         <td>[о]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ѡ">Ѡ ѡ Ѽ ѽ</a></td>
+                        <td><a href="буквы/Ѡ.html">Ѡ ѡ Ѽ ѽ</a></td>
                         <td class="tf">Оме́га (он вели́кий)</td>
                         <td>[о]</td>
                     </tr>
                     <tr>
-                        <td><a href="#П">П п</a></td>
+                        <td><a href="буквы/П.html">П п</a></td>
                         <td class="tf">Поко́й</td>
                         <td>[п]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Р">Р р</a></td>
+                        <td><a href="буквы/Р.html">Р р</a></td>
                         <td class="tf">Рцы</td>
                         <td>[р]</td>
                     </tr>
                     <tr>
-                        <td><a href="#С">С с</a></td>
+                        <td><a href="буквы/С.html">С с</a></td>
                         <td class="tf">Сло́во</td>
                         <td>[с]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Т">Т т</a></td>
+                        <td><a href="буквы/Т.html">Т т</a></td>
                         <td class="tf">Тве́рдо</td>
                         <td>[т]</td>
                     </tr>
                     <tr>
-                        <td><a href="#У">Ѹ ѹ Ꙋ ꙋ</a></td>
+                        <td><a href="буквы/У.html">Ѹ ѹ Ꙋ ꙋ</a></td>
                         <td class="tf">Ук</td>
                         <td>[у]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ф">Ф ф</a></td>
+                        <td><a href="буквы/Ф.html">Ф ф</a></td>
                         <td class="tf">Ферт</td>
                         <td>[ф]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Х">Х х</a></td>
+                        <td><a href="буквы/Х.html">Х х</a></td>
                         <td class="tf">Хер</td>
                         <td>[х]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ѿ">Ѿ ѿ</a></td>
+                        <td><a href="буквы/Ѿ.html">Ѿ ѿ</a></td>
                         <td class="tf">От</td>
                         <td>[от]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ц">Ц ц</a></td>
+                        <td><a href="буквы/Ц.html">Ц ц</a></td>
                         <td class="tf">Цы</td>
                         <td>[ц]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ч">Ч ч</a></td>
+                        <td><a href="буквы/Ч.html">Ч ч</a></td>
                         <td class="tf">Червь</td>
                         <td>[ч]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ш">Ш ш</a></td>
+                        <td><a href="буквы/Ш.html">Ш ш</a></td>
                         <td class="tf">Ша</td>
                         <td>[ш]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Щ">Щ щ</a></td>
+                        <td><a href="буквы/Щ.html">Щ щ</a></td>
                         <td class="tf">Ща</td>
                         <td>[щ]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ъ">Ъ ъ</a></td>
+                        <td><a href="буквы/Ъ.html">Ъ ъ</a></td>
                         <td class="tf">Ер</td>
                         <td class="tf">Означает твердость предыдущего согласного</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ы">Ы ы</a></td>
+                        <td><a href="буквы/Ы.html">Ы ы</a></td>
                         <td class="tf">Еры́</td>
                         <td>[ы]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ь">Ь ь</a></td>
+                        <td><a href="буквы/Ь.html">Ь ь</a></td>
                         <td class="tf">Ерь</td>
                         <td class="tf">Означает мягкость предыдущего согласного</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ѣ">Ѣ ѣ</a></td>
+                        <td><a href="буквы/Ѣ.html">Ѣ ѣ</a></td>
                         <td class="tf">Ять</td>
                         <td>[е]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ю">Ю ю</a></td>
+                        <td><a href="буквы/Ю.html">Ю ю</a></td>
                         <td class="tf">Ю</td>
                         <td>[ю]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ꙗ">Ꙗ ꙗ</a></td>
+                        <td><a href="буквы/Ꙗ.html">Ꙗ ꙗ</a></td>
                         <td class="tf">Я</td>
                         <td>[я]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ѧ">Ѧ ѧ</a></td>
+                        <td><a href="буквы/Ѧ.html">Ѧ ѧ</a></td>
                         <td class="tf">Ма́лый юс</td>
                         <td>[я]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ѯ">Ѯ ѯ</a></td>
+                        <td><a href="буквы/Ѯ.html">Ѯ ѯ</a></td>
                         <td class="tf">Кси</td>
                         <td>[кс]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ѱ">Ѱ ѱ</a></td>
+                        <td><a href="буквы/Ѱ.html">Ѱ ѱ</a></td>
                         <td class="tf">Пси</td>
                         <td>[пс]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ѳ">Ѳ ѳ</a></td>
+                        <td><a href="буквы/Ѳ.html">Ѳ ѳ</a></td>
                         <td class="tf">Фита́</td>
                         <td>[ф]</td>
                     </tr>
                     <tr>
-                        <td><a href="#Ѵ">Ѵ ѵ</a></td>
+                        <td><a href="буквы/Ѵ.html">Ѵ ѵ</a></td>
                         <td class="tf">И́жица</td>
-                        <td class="tf" style="font-size: 16px;">Формально выбор правильного чтения ижицы определяют надстрочные знаки: если над ижицей стоит придыхание и (или) ударение, то это гласный [и], а если ничего не стоит — то согласный [в]. Для обозначения ижиц, которые надо читать как [и], но которые стоят не в начале слова и не под ударением, используется специальный надстрочный знак — кендема (<span class="csf">ѷ</span>), сегодня иногда ошибочно называемый «двойным грависом». Ижица с кендемой отдельной буквой азбуки не является.</td>
+                        <td class="tf" style="font-size: 16px;">ѵ̑, ѵ́, ѷ - [и] | ѵ - [в]</td>
                     </tr>
                 </tbody>
             </table>
@@ -596,7 +596,7 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    <script src="jquery-3.6.0.min.js"></script>
+    <script src="semantic.min.js"></script>
 </body>
 </html>
