--- a/буквы/І.html
+++ b/буквы/І.html
@@ -109,7 +109,7 @@
 
         <h2>Пример слов:</h2>
         <div class="ui message">
-            <p class="csf">І҆ерⷭ҇ли́мъ, І҆и҃съ, І҆ерⷭ҇ли́мъ</p>
+            <p class="csf">І҆ерⷭ҇ли́мъ, І҆и҃съ</p>
         </div>
        
         <br>
