--- a/буквы/Ꙗ.html
+++ b/буквы/Ꙗ.html
@@ -101,7 +101,7 @@
             <h1 class="letter">Ꙗ</h1>
             <div class="message-content">
                 <p><b>Буква: </b> <span class="csf">Ꙗ ꙗ</span></p>
-                <p><b>Название: </b> <span class="csf">я</span></p>
+                <p><b>Название: </b> <span class="csf">аз йотированный</span></p>
                 <p><b>Произношение: </b> <span class="csf">[я]</span></p>
             </div>
         </div>        
