--- a/буквы/Ꙗ.html
+++ b/буквы/Ꙗ.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Я | Церковнославянский язык</title>
+    <title>Аз йотированный | Церковнославянский язык</title>
     <link rel="stylesheet" href="../semantic.min.css">
     <style>
         @font-face {
