--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     </tr>
                     <tr>
                         <td><a href="буквы/Ꙗ.html">Ꙗ ꙗ</a></td>
-                        <td class="tf">Я</td>
+                        <td class="tf">Аз йотированный</td>
                         <td>[я]</td>
                     </tr>
                     <tr>
